[+] Err Handling middleware
