# docs/swagger.yaml
@@ -1,5 +1,12 @@
 basePath: /
 definitions:
+  middlewares.GeneralError:
+    properties:
+      detaiil:
+        type: string
+      message:
+        type: string
+    type: object
   user.CreateUserDTO:
     properties:
       name:
@@ -15,6 +22,17 @@ definitions:
         type: string
       username:
         type: string
+    type: object
+  user.Pagination:
+    properties:
+      page:
+        type: integer
+      pageSize:
+        type: integer
+      totalCount:
+        type: integer
+      totalPage:
+        type: integer
     type: object
   user.User:
     properties:
@@ -39,8 +57,8 @@ definitions:
         items:
           $ref: '#/definitions/user.User'
         type: array
-      page:
-        type: integer
+      pagination:
+        $ref: '#/definitions/user.Pagination'
     type: object
 info:
   contact: {}
@@ -68,6 +86,10 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/user.User'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/middlewares.GeneralError'
       summary: Get single user by ID
       tags:
       - 'Internal :: User'
